<resources>
    <string name="app_name">Idiomes i Temes</string>
    <string name="Titol">Els colors</string>
    <string name="Blau">Blau</string>
    <string name="Fucsia">Fúcsia</string>
    <string name="Plata">Plata</string>
    <string name="Gris">Gris</string>
    <string name="Negre">Negre</string>
    <string name="Vermell">Vermell</string>
    <string name="Marró">Marró</string>
    <string name="Taronja">Taronja</string>
    <string name="Groc">Groc</string>
    <string name="Oliva">Oliva</string>
    <string name="Llima">Llima</string>
    <string name="Verd">Verd</string>
    <string name="TitolLayout">Colors multiidioma</string>
</resources>