<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titol"
        android:text="@string/Titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="170dp"
        app:layout_constraintCircleAngle="0"/>

    <TextView
        android:id="@+id/Blau"
        android:text="@string/Blau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="0"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlue"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Fucsia"
        android:text="@string/Fucsia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="30"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorFuchsia"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Plata"
        android:text="@string/Plata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="60"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorSilver"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Gris"
        android:text="@string/Gris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="90"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGray"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Negre"
        android:text="@string/Negre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="120"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlack"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Vermell"
        android:text="@string/Vermell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="150"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorRed"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Marro"
        android:text="@string/Marró"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="180"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorMaroon"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Taronja"
        android:text="@string/Taronja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="210"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOrange"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Groc"
        android:text="@string/Groc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="240"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorYellow"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Oliva"
        android:text="@string/Oliva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="270"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOlive"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Llima"
        android:text="@string/Llima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="300"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorLime"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Verd"
        android:text="@string/Verd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintCircleAngle="330"/>

    <FrameLayout
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGreen"
        app:layout_constraintCircle="@id/centro"
        app:layout_constraintCircleRadius="70dp"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

